Add some new atoms and layout

--- a/atoms.html
+++ b/atoms.html
@@ -28,13 +28,17 @@
    <img src="" alt="">
    <div class="info">
      <div class="price">
-       <b>this is a header</b>
-       <span>15.00 <em>per lb</em></span>
-     </div>
-     <div class="score">85</div>
+       <h6>this is a title</h6>
+       <p><b>Country</b></p>
+       <p>15.00 <em>per lb</em></p>
+     </div><span class="score right">
+     <b>score</b>
+     <div class="value">85</div>
+     </div>     
    </div>
  </article>
 
  <nav><div class="navitem"><a href="">Coffees</a></div><div class="navitem"><a href="">About us</a></div><div class="navitem"><a href="">page</a></div></nav>
+ <footer></footer>
 </body>
 </html>
