--- a/test.html
+++ b/test.html
@@ -3,36 +3,130 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <nav></nav>
+  <nav>
+  <div class="navitem right"><a href="">Coffees</a></div>
+    <div class="navitem right"><a href="">About us</a></div>
+    <div class="navitem right"><a href="">page</a></div>
+  </nav>
   <section>
+    <div class="carousel">
+    <div class="slide"></div>
+    <div class="slide" style="background:green;"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    </div>
     <article>
      <img src="" alt="">
      <div class="info">
        <div class="price">
-         <b>this is a header</b>
-         <span>15.00 <em>per lb</em></span>
-       </div>
-       <div class="score">85</div>
-     </div>
-   </article><article>
-     <img src="" alt="">
-     <div class="info">
-       <div class="price">
-         <b>this is a header</b>
-         <span>15.00 <em>per lb</em></span>
-       </div>
-       <div class="score">85</div>
-     </div>
-   </article><article>
-     <img src="" alt="">
-     <div class="info">
-       <div class="price">
-         <b>this is a header</b>
-         <span>15.00 <em>per lb</em></span>
-       </div>
-       <div class="score">85</div>
-     </div>
-   </article>
- </section>
+         <h6>this is a title</h6>
+         <p><b>Country</b></p>
+         <p>15.00 <em>per lb</em></p>
+       </div><span class="score right">
+       <b>score</b>
+       <div class="value">85</div>
+     </div>     
+   </div>
+ </article><article>
+   <img src="" alt="">
+   <div class="info">
+     <div class="price">
+       <h6>this is a title</h6>
+       <p><b>Country</b></p>
+       <p>15.00 <em>per lb</em></p>
+     </div><span class="score right">
+     <b>score</b>
+     <div class="value">85</div>
+     </div>     
+   </div>
+ </article><article>
+   <img src="" alt="">
+   <div class="info">
+     <div class="price">
+       <h6>this is a title</h6>
+       <p><b>Country</b></p>
+       <p>15.00 <em>per lb</em></p>
+     </div><span class="score right">
+     <b>score</b>
+     <div class="value">85</div>
+     </div>     
+   </div>
+ </article><article>
+   <img src="" alt="">
+   <div class="info">
+     <div class="price">
+       <h6>this is a title</h6>
+       <p><b>Country</b></p>
+       <p>15.00 <em>per lb</em></p>
+     </div><span class="score right">
+     <b>score</b>
+     <div class="value">85</div>
+     </div>     
+   </div>
+ </article><article>
+   <img src="" alt="">
+   <div class="info">
+     <div class="price">
+       <h6>this is a title</h6>
+       <p><b>Country</b></p>
+       <p>15.00 <em>per lb</em></p>
+     </div><span class="score right">
+     <b>score</b>
+     <div class="value">85</div>
+     </div>     
+   </div>
+ </article><article>
+   <img src="" alt="">
+   <div class="info">
+     <div class="price">
+       <h6>this is a title</h6>
+       <p><b>Country</b></p>
+       <p>15.00 <em>per lb</em></p>
+     </div><span class="score right">
+     <b>score</b>
+     <div class="value">85</div>
+     </div>     
+   </div>
+ </article><article>
+   <img src="" alt="">
+   <div class="info">
+     <div class="price">
+       <h6>this is a title</h6>
+       <p><b>Country</b></p>
+       <p>15.00 <em>per lb</em></p>
+     </div><span class="score right">
+     <b>score</b>
+     <div class="value">85</div>
+     </div>     
+   </div>
+ </article><article>
+   <img src="" alt="">
+   <div class="info">
+     <div class="price">
+       <h6>this is a title</h6>
+       <p><b>Country</b></p>
+       <p>15.00 <em>per lb</em></p>
+     </div><span class="score right">
+     <b>score</b>
+     <div class="value">85</div>
+     </div>     
+   </div>
+ </article><article>
+   <img src="" alt="">
+   <div class="info">
+     <div class="price">
+       <h6>this is a title</h6>
+       <p><b>Country</b></p>
+       <p>15.00 <em>per lb</em></p>
+     </div><span class="score right">
+     <b>score</b>
+     <div class="value">85</div>
+     </div>     
+   </div>
+ </article>
+</section>
+<footer>
+  <p>thest test test test test</p>
+</footer>
 </body>
 </html>
